--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines":{
+    "node": "6.2.2"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
